--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-light bg-light nav-height">
         <a class="navbar-brand" href="#">
-          <img src="./images/mav logo white.png" width="90" height="30" alt="" class="logo" loading="lazy">
+          <img src="mav logo white.png" width="90" height="30" alt="" class="logo" loading="lazy">
         </a>
       </nav>
       <div class="jumbotron">
