--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">‘Hospitals need to discharge asymptomatic, mild Covid-19 patients within 24 hours’: Delhi health department</p>
+          <p class="card-text">‘Hosp need to discharge asymptomatic, mild Covid-19 patients within 24 hours’: Delhi health department</p>
           <a href="https://www.hindustantimes.com/india-news/news-updates-from-hindustan-times-discharge-asymptomatic-mild-covid-patients-within-24-hrs-says-delhi-govt-and-all-the-latest-news/story-H1pQjF96d7qaXcutKDchnN.html" class="btn btn-primary">Learn More</a>
         </div>
       </div>
