--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">3.</h5>
+          <p class="card-text">Apple publishes tools to help generate stronger passwords.</p>
+          <a href="https://www.hindustantimes.com/india-news/news-updates-from-hindustan-times-discharge-asymptomatic-mild-covid-patients-within-24-hrs-says-delhi-govt-and-all-the-latest-news/story-H1pQjF96d7qaXcutKDchnN.html" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">4.</h5>
+          <p class="card-text">This World Environment Day, a book to celebrate 10 Indian conservationists.</p>
+          <a href="https://www.hindustantimes.com/books/world-environment-day-2020-a-book-to-celebrate-10-indian-conservationists/story-U0oEJ9mOxtNix4hsUCtZtO.html" class="btn btn-primary">Learn More</a>
         </div>
       </div>
       
