--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </nav>
       <div class="jumbotron">
         <h1 class="display-4">Welcome!</h1>
-        <p class="lead">This is the official website of The Mavericks MNIT.</p>
+        <p class="lead">This is the official website of</br>The Mavericks MNIT.</p>
         <hr class="my-4">
         <p>For more updates follow us on Instagram.</p>
         <a class="btn btn-outline-primary" href="https://www.instagram.com/mavericks.mnit/" role="button">Instagram</a>
