--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">‘Hospitals need to discharge asymptomatic, mild Covid-19 patients within 24 hours’: Delhi health department</p>
-          <a href="https://www.hindustantimes.com/india-news/news-updates-from-hindustan-times-discharge-asymptomatic-mild-covid-patients-within-24-hrs-says-delhi-govt-and-all-the-latest-news/story-H1pQjF96d7qaXcutKDchnN.html" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Michael Jordan and his Jordan Brand pledge $100 Million to black communities</p>
+          <a href="https://www.goodnewsnetwork.org/michael-jordan-brand-pledges-100million-to-black-communities/" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">कोरोना बेड के नाम पर ब्लैकमार्केटिंग करने वाले अस्पताल पर होगी कार्रवाई: केजरीवाल</p>
-          <a href="https://aajtak.intoday.in/story/delhi-hospital-corona-patient-bed-cm-arvind-kejriwal-warning-1-1198144.html" class="btn btn-primary">Learn More</a>
+          <p class="card-text">New Zealand declares itself as Covid-free.</p>
+          <a href="https://www.google.co.in/url?sa=t&source=web&rct=j&url=https://m.economictimes.com/news/international/world-news/new-zealand-declared-covid-free-nation-pm-jacinda-ardern-lifts-all-restrictions/amp_videoshow/76285612.cms&ved=2ahUKEwjGyJ2-o_fpAhUY7HMBHSAsA-cQ0PADMBt6BAgJEBI&usg=AOvVaw17zseAj5Xv_30spizn8f8J" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">Apple publishes tools to help generate stronger passwords.</p>
-          <a href="https://www.hindustantimes.com/india-news/news-updates-from-hindustan-times-discharge-asymptomatic-mild-covid-patients-within-24-hrs-says-delhi-govt-and-all-the-latest-news/story-H1pQjF96d7qaXcutKDchnN.html" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Kannur airport introduces a 'smart' gate to screen passengers for COVID-19.</p>
+          <a href="https://www.newindianexpress.com/videos/good-news/2020/may/29/in-a-first-smart-gate-coming-up-at-kannur-airport-to-screen-passengers-for-covid-19-108481.html" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">This World Environment Day, a book to celebrate 10 Indian conservationists.</p>
-          <a href="https://www.hindustantimes.com/books/world-environment-day-2020-a-book-to-celebrate-10-indian-conservationists/story-U0oEJ9mOxtNix4hsUCtZtO.html" class="btn btn-primary">Learn More</a>
+          <p class="card-text">29% rise in Asiatic lion population in Gir.</p>
+          <a href="https://www.google.com/amp/s/www.timesnownews.com/amp/mirror-now/in-focus/article/roaring-success-lion-population-up-by-29-in-gujarat-674-big-cats-in-the-state/604412" class="btn btn-primary">Learn More</a>
         </div>
       </div>
       
