--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">Michael Jordan and his Jordan Brand pledge $100 Million to black communities</p>
-          <a href="https://www.goodnewsnetwork.org/michael-jordan-brand-pledges-100million-to-black-communities/" class="btn btn-primary">Learn More</a>
+          <p class="card-text">शिक्षा मंत्री रमेश पोखरियाल ने जारी की एनआईआरएफ रैंकिंग</p>
+          <a href="https://dainik-b.in/yPUT4tt5d7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">New Zealand declares itself as Covid-free.</p>
-          <a href="https://www.google.co.in/url?sa=t&source=web&rct=j&url=https://m.economictimes.com/news/international/world-news/new-zealand-declared-covid-free-nation-pm-jacinda-ardern-lifts-all-restrictions/amp_videoshow/76285612.cms&ved=2ahUKEwjGyJ2-o_fpAhUY7HMBHSAsA-cQ0PADMBt6BAgJEBI&usg=AOvVaw17zseAj5Xv_30spizn8f8J" class="btn btn-primary">Learn More</a>
+          <p class="card-text">दो साल में 3976 वर्ग किमी जंगल बड़े</p>
+          <a href="https://dainik-b.in/Tfj1qDqxd7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">Kannur airport introduces a 'smart' gate to screen passengers for COVID-19.</p>
-          <a href="https://www.newindianexpress.com/videos/good-news/2020/may/29/in-a-first-smart-gate-coming-up-at-kannur-airport-to-screen-passengers-for-covid-19-108481.html" class="btn btn-primary">Learn More</a>
+          <p class="card-text">कोरोना के बाद भारत तेजी से विकास करेगा; रेटिंग एजेंसी फिच ने 9.5% तो एसएंडपी ने 8.5% जीडीपी ग्रोथ का अनुमान जताया </p>
+          <a href="https://dainik-b.in/gjB8EgzLd7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
