--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="card-body">
           <h5 class="card-title">1.</h5>
           <p class="card-text">Newly wed couple celebrates their wedding alongside Black Lives Matter protest in Philadelphia.</p>
-          <a href="https://www.harpersbazaar.com/wedding/photos/amp32799721/black-lives-matter-protest-wedding/&ved=2ahUKEwienZvWn_zpAhUpzjgGHSYiBjgQFjAGegQIAhAB&usg=AOvVaw0Wia20NOEl4ZOnsfmRWrnw&ampcf=1">Learn More</a>
+          <a href="https://www.harpersbazaar.com/wedding/photos/amp32799721/black-lives-matter-protest-wedding/&ved=2ahUKEwienZvWn_zpAhUpzjgGHSYiBjgQFjAGegQIAhAB&usg=AOvVaw0Wia20NOEl4ZOnsfmRWrnw&ampcf=1" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
@@ -41,7 +41,7 @@
         <div class="card-body">
           <h5 class="card-title">3.</h5>
           <p class="card-text">Mumbai's Tata hospital operates on 494 cancer patients in lockdown.</p>
-          <a href="https://m.timesofindia.com/city/mumbai/mumbai-tata-hospital-operates-on-494-cancer-patients-in-lockdown/articleshow/76331404.cms">Learn More</a>
+          <a href="https://m.timesofindia.com/city/mumbai/mumbai-tata-hospital-operates-on-494-cancer-patients-in-lockdown/articleshow/76331404.cms" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
