--- a/index.html
+++ b/index.html
@@ -24,32 +24,48 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">Newly wed couple celebrates their wedding alongside Black Lives Matter protest in Philadelphia.</p>
-          <a href="https://www.harpersbazaar.com/wedding/photos/amp32799721/black-lives-matter-protest-wedding/&ved=2ahUKEwienZvWn_zpAhUpzjgGHSYiBjgQFjAGegQIAhAB&usg=AOvVaw0Wia20NOEl4ZOnsfmRWrnw&ampcf=1" class="btn btn-primary">Learn More</a>
+          <p class="card-text">कॉमिक हीरो का नया अवतार</p>
+          <a href="https://dainik-b.in/6GNoOTmcg7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">Doubling rate in Mumbai stands at 24 days, ahead of the national average of 16.</p>
-          <a href="https://www.google.co.in/url?sa=t&source=web&rct=j&url=https://www.moneycontrol.com/news/coronavirus/coronavirus-outbreak-mumbais-doubling-rate-improves-to-24-days-higher-than-national-average-of-16-days-5387331.html/amp&ved=2ahUKEwis6_6NovzpAhX79nMBHb_FAe4Q0PADMAJ6BAgJEA4&usg=AOvVaw2QQON2kRLZKXyyb6ucILo_&ampcf=1" class="btn btn-primary">Learn More</a>
+          <p class="card-text">लॉक डाउन में लोगों ने पारले- जी और मैगी नूडल्स की हुई 25% बढ़ोतरी</p>
+          <a href="https://dainik-b.in/M9ixdwjye7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">Mumbai's Tata hospital operates on 494 cancer patients in lockdown.</p>
-          <a href="https://m.timesofindia.com/city/mumbai/mumbai-tata-hospital-operates-on-494-cancer-patients-in-lockdown/articleshow/76331404.cms" class="btn btn-primary">Learn More</a>
+          <p class="card-text">'गुरुजी ऑन डिमांड ' ने शुरू किया 'मोक्ष सेवा '</p>
+          <a href="https://dainik-b.in/U0miHd6vZ6" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">Thriving nests of 160 vultures near Panna Tiger Reserve.</p>
-          <a href="https://www.google.co.in/url?sa=t&source=web&rct=j&url=https://m.timesofindia.com/city/bhopal/found-thriving-nests-of-160-vultures-near-panna-tiger-reserve/amp_articleshow/76290623.cms&ved=2ahUKEwjqp6nCo_zpAhXu73MBHUOACYUQFjAAegQIBBAB&usg=AOvVaw2USvmyZM2Ht-6Isyt5BqPM&ampcf=1&cshid=1591967801306" class="btn btn-primary">Learn More</a>
+          <p class="card-text">जयपुर में बनेगा देश का तीसरा सबसे बड़ा स्टेडियम।</p>
+          <a href="https://dainik-b.in/HWfdbyJnh7" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">5.</h5>
+          <p class="card-text">ओरल पोलियो वैक्सीन कोरोना से मौत के खतरे को कम कर सकती है।</p>
+          <a href="https://dainik-b.in/8YMU1nxsh7" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+      
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">6.</h5>
+          <p class="card-text">भारतीय मूल की अनमोल नारंग सेकंड लेफ्टिनेंट का पद संभालेगी।</p>
+          <a href="https://dainik-b.in/j7ZNbSMsh7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
       
