--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="card-body">
           <h5 class="card-title">2.</h5>
           <p class="card-text">CCMB develops method to diagnose leukaemia</p>
-          <a href="https://timesofindia.indiatimes.com/city/hyderabad/ccmb-develops-method-to-diagnose-leukaemia/articleshow/76348956.cms">Learn More</a>
+          <a href="https://timesofindia.indiatimes.com/city/hyderabad/ccmb-develops-method-to-diagnose-leukaemia/articleshow/76348956.cms" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
