--- a/index.html
+++ b/index.html
@@ -48,16 +48,24 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">Band-Aid Announces it Will Finally Make Bandages For Darker Skin Tones.</p>
-          <a href="https://www.highsnobiety.com/p/band-aid-diverse-skin-tone-bandages/#:~:text=Taking%20to%20Instagram%2C%20BAND%2DAID,the%20Black%20Lives%20Matter%20movement.&text=We%20can%2C%20we%20must%20and%20we%20will%20do%20better" class="btn btn-primary">Learn More</a>
+          <p class="card-text">डेक्सामेथासोन पहली लाइफ सेविंग ड्रग बनकर उभरी, इसने 3 में से 1 गंभीर कोरोना मरीज की जान बचाई </p>
+          <a href="https://dainik-b.in/1HYuUNtNm7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
        <div class="card">
         <div class="card-body">
           <h5 class="card-title">5.</h5>
-          <p class="card-text">Water board goes robotic, uses novel technology to clean choked sewers.</p>
-          <a href="https://timesofindia.indiatimes.com/city/hyderabad/water-board-goes-robotic-uses-novel-technology-to-clean-choked-sewers/articleshow/76376442.cms#:~:text=SECUNDERABAD%3A%20Hyderabad%20Metropolitan%20Water%20Supply,nagging%20problem%20of%20blocked%20sewage.&text=A%20couple%20of%20months%20ago,put%20to%20use%20at%20Sitaphalmandi" class="btn btn-primary">Learn More</a>
+          <p class="card-text">फ्लिपकार्ट 90 मिनट के अंदर आपके घर पहुंचाएगी सामान, लॉजिस्टिक्‍स स्‍टार्टअप शैडोफैक्‍स से मिलाया हाथ </p>
+          <a href="https://dainik-b.in/7BxokmQ0n7" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">6.</h5>
+          <p class="card-text">बंगाल के स्टूडेंट्स ने स्कूल के लिए बनाया 'आयुर्वेदिक सैनिटाइजेशन टनल', एक साथ 12 लोगों को करेगी सैनिटाइज</p>
+          <a href="https://dainik-b.in/Xxw65sOFm7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
       
