--- a/index.html
+++ b/index.html
@@ -24,48 +24,32 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">रिलायंस ने निवेशकों से किया कर्जमुक्त कंपनी बनने का वादा समय से पहले निभाया, 58 दिनों में 1,68,818 लाख करोड़ रुपए जुटाए </p>
-          <a href="https://dainik-b.in/koGAqdN7q7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Glenmark launches COVID-19 drug Favipiravir in India after DCGI approval.</p>
+          <a href="https://www.google.co.in/amp/s/www.nationalheraldindia.com/amp/story/health%252Fgood-news-glenmark-launches-covid-19-drug-favipiravir-in-india-after-dcgi-approval" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">19 सीटों पर वोटिंग जारी; मध्य प्रदेश में क्रॉस वोटिंग का डर, कमलनाथ विधायकों को दो बसों में लेकर विधानसभा पहुंचे</p>
-          <a href="https://dainik-b.in/QGGVeaHSq7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Renewal of recognition on the cards for three national sports federations.</p>
+          <a href="https://www.google.co.in/amp/s/www.newindianexpress.com/sport/other/2020/jun/20/renewal-of-recognition-on-the-cards-for-three-national-sports-federations-2159118.amp" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">जेईई मेन और नीट के आयोजन को लेकर 25 जून को होगा अंतिम फैसला, हालातों की समीक्षा के बाद होगा निर्णय</p>
-          <a href="https://dainik-b.in/PtkDQK9Ep7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Over 2 lakh people recover from COVID-19 in India.</p>
+          <a href="https://www.google.com/amp/s/www.dnaindia.com/india/report-over-2-lakh-of-38-lakh-covid-19-patients-cured-in-india-recovery-rate-improves-to-5379-2828729/amp" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
        <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">इंफ्लुएंजा की दवा यूमिफेनोवीर का कोरोना के मरीजों पर होगा ट्रायल, लखनऊ के सेंट्रल ड्रग रिसर्च इंस्टीट्यूट को मिली मंजूरी</p>
-          <a href="https://dainik-b.in/K5UYpu4or7" class="btn btn-primary">Learn More</a>
-        </div>
-      </div>
-
-       <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">5.</h5>
-          <p class="card-text">पीएन पनिकर के सम्मान में हर साल मनाया जाता है रीडिंग डे, CBSE इस साल ऑनलाइन सेलिब्रेट करेगा यह दिनी</p>
-          <a href="https://dainik-b.in/554m9c5er7" class="btn btn-primary">Learn More</a>
-        </div>
-      </div>
-
-        <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">6.</h5>
-          <p class="card-text">अब ग्राहक ई-कॉमर्स साइट्स पर देख सकेंगे प्रोडक्ट मेड इन इंडिया है या नहीं, सरकार ई-कॉमर्स पॉलिसी में करेगी बदलाव</p>
-          <a href="https://dainik-b.in/B6kVpEPyr7" class="btn btn-primary">Learn More</a>
+          <p class="card-text"> Color-Changing Inks Can Be Printed onto Clothing to Warn the Wearer About Potential Health Issues</p>
+          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://www.goodnewsnetwork.org/color-changing-inks-from-tufts-can-be-printed-onto-clothing/&ved=0ahUKEwjetdCDy5DqAhUUbn0KHSsJCCoQxfQBCCkwAA&usg=AOvVaw01YfqhP5F4WcF1qx9q5sBl" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
