--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">Glenmark launches COVID-19 drug Favipiravir in India after DCGI approval.</p>
-          <a href="https://www.google.co.in/amp/s/www.nationalheraldindia.com/amp/story/health%252Fgood-news-glenmark-launches-covid-19-drug-favipiravir-in-india-after-dcgi-approval" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Delhi HC allows public viewing of court proceedings conducted through video conferencing</p>
+          <a href="https://www.google.com/amp/s/www.outlookindia.com/newsscroll/amp/delhi-hc-allows-public-viewing-of-video-conference-hearings/1872194" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">Renewal of recognition on the cards for three national sports federations.</p>
-          <a href="https://www.google.co.in/amp/s/www.newindianexpress.com/sport/other/2020/jun/20/renewal-of-recognition-on-the-cards-for-three-national-sports-federations-2159118.amp" class="btn btn-primary">Learn More</a>
+          <p class="card-text"Dubai starts welcoming residency visa holders today and tourists from July 7</p>
+          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://m.timesofindia.com/india/dubai-opens-up-for-residency-visa-holders-from-today/amp_articleshow/76501058.cms&ved=2ahUKEwiD3tD-zZXqAhXkyzgGHUdHBPAQFjABegQIBhAC&usg=AOvVaw1FFo51z1zaj1UXiPznW2qk&ampcf=1" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">Over 2 lakh people recover from COVID-19 in India.</p>
-          <a href="https://www.google.com/amp/s/www.dnaindia.com/india/report-over-2-lakh-of-38-lakh-covid-19-patients-cured-in-india-recovery-rate-improves-to-5379-2828729/amp" class="btn btn-primary">Learn More</a>
+          <p class="card-text" NBA players can choose to wear 'smart ring' that may help detect COVID-19 symptoms</p>
+          <a href="https://www.google.com/amp/s/www.cbsnews.com/amp/news/nba-players-oura-smart-rings-coronavirus-symptoms/" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
        <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text"> Color-Changing Inks Can Be Printed onto Clothing to Warn the Wearer About Potential Health Issues</p>
-          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://www.goodnewsnetwork.org/color-changing-inks-from-tufts-can-be-printed-onto-clothing/&ved=0ahUKEwjetdCDy5DqAhUUbn0KHSsJCCoQxfQBCCkwAA&usg=AOvVaw01YfqhP5F4WcF1qx9q5sBl" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Price of Covid treatment significantly reduced in Delhi</p>
+          <a href="https://t.co/GZZDMjsQak?amp=1" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
