--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">Delhi HC allows public viewing of court proceedings conducted through video conferencing</p>
-          <a href="https://www.google.com/amp/s/www.outlookindia.com/newsscroll/amp/delhi-hc-allows-public-viewing-of-video-conference-hearings/1872194" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Barcelona opera reopens with a concert for nearly 3,000 houseplants.</p>
+          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://m.hindustantimes.com/art-and-culture/songs-for-succulents-barcelona-opera-reopens-with-concert-for-plants/story-PXsaQkgLDF9rx41bP6NEaK_amp.html&ved=2ahUKEwjawr6YwJrqAhVxxjgGHfHLBTgQFjAEegQIARAB&usg=AOvVaw335lWoRW5-4pUFgcR1S6S2&ampcf=1" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text"Dubai starts welcoming residency visa holders today and tourists from July 7</p>
-          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://m.timesofindia.com/india/dubai-opens-up-for-residency-visa-holders-from-today/amp_articleshow/76501058.cms&ved=2ahUKEwiD3tD-zZXqAhXkyzgGHUdHBPAQFjABegQIBhAC&usg=AOvVaw1FFo51z1zaj1UXiPznW2qk&ampcf=1" class="btn btn-primary">Learn More</a>
+          <p class="card-text"> Delhi revises coronavirus strategy, will screen every house by July-6.</p>
+          <a href="https://www.google.co.in/url?sa=t&source=web&rct=j&url=https://www.ndtv.com/delhi-news/every-house-to-be-screened-by-july-6-delhi-preps-new-covid-plan-2251201%3Famp%3D1%26akamai-rum%3Doff&ved=2ahUKEwjLvcLJwJrqAhV8wTgGHeXdBL0QyM8BMAF6BAgKEAQ&usg=AOvVaw0r_8UIsvG9y5MMRFPvAwfM&ampcf=1" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text" NBA players can choose to wear 'smart ring' that may help detect COVID-19 symptoms</p>
-          <a href="https://www.google.com/amp/s/www.cbsnews.com/amp/news/nba-players-oura-smart-rings-coronavirus-symptoms/" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Studies suggest Asia stocks are set to outperform other emerging markets in the second half of 2020, supported by a weakening U.S. dollar.</p>
+          <a href="https://www.google.co.in/url?sa=t&source=web&rct=j&url=https://www.bloombergquint.com/amp/markets/credit-suisse-says-asia-equities-to-outperform-in-second-half&ved=2ahUKEwicsJq6v5rqAhXPVisKHQrzBhEQiJQBMAt6BAgIEAg&usg=AOvVaw3aF0PYCk56RT59A4llexxU&ampcf=1" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
        <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">Price of Covid treatment significantly reduced in Delhi</p>
-          <a href="https://t.co/GZZDMjsQak?amp=1" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Brazil nears deal to produce Oxford coronavirus vaccine</p>
+          <a href="https://www.google.co.in/amp/s/www.indiatoday.in/amp/india/story/coronavirus-news-live-updates-coronil-patanjali-covid-medicine-india-cases-1692084-2020-06-24" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
