--- a/index.html
+++ b/index.html
@@ -24,32 +24,24 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">Barcelona opera reopens with a concert for nearly 3,000 houseplants.</p>
-          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://m.hindustantimes.com/art-and-culture/songs-for-succulents-barcelona-opera-reopens-with-concert-for-plants/story-PXsaQkgLDF9rx41bP6NEaK_amp.html&ved=2ahUKEwjawr6YwJrqAhVxxjgGHfHLBTgQFjAEegQIARAB&usg=AOvVaw335lWoRW5-4pUFgcR1S6S2&ampcf=1" class="btn btn-primary">Learn More</a>
+          <p class="card-text">तीन महीने बाद एफिल टावर दोबारा खोला गया, रूस में 24 घंटे में 7113 मामले सामने आए; दुनिया में अब तक 95 लाख से ज्यादा मरीज</p>
+          <a href="https://dainik-b.in/M8N9gF9TA7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text"> Delhi revises coronavirus strategy, will screen every house by July-6.</p>
-          <a href="https://www.google.co.in/url?sa=t&source=web&rct=j&url=https://www.ndtv.com/delhi-news/every-house-to-be-screened-by-july-6-delhi-preps-new-covid-plan-2251201%3Famp%3D1%26akamai-rum%3Doff&ved=2ahUKEwjLvcLJwJrqAhV8wTgGHeXdBL0QyM8BMAF6BAgKEAQ&usg=AOvVaw0r_8UIsvG9y5MMRFPvAwfM&ampcf=1" class="btn btn-primary">Learn More</a>
+          <p class="card-text">2018-19 के लिए आयकर रिटर्न भरने की तारीख 31 जुलाई तक बढ़ाई गई, आधार-पैन लिंक मार्च 2021 तक करवा सकेंगे </p>
+          <a href="https://dainik-b.in/L9g3JGKbA7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">Studies suggest Asia stocks are set to outperform other emerging markets in the second half of 2020, supported by a weakening U.S. dollar.</p>
-          <a href="https://www.google.co.in/url?sa=t&source=web&rct=j&url=https://www.bloombergquint.com/amp/markets/credit-suisse-says-asia-equities-to-outperform-in-second-half&ved=2ahUKEwicsJq6v5rqAhXPVisKHQrzBhEQiJQBMAt6BAgIEAg&usg=AOvVaw3aF0PYCk56RT59A4llexxU&ampcf=1" class="btn btn-primary">Learn More</a>
-        </div>
-      </div>
-
-       <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">4.</h5>
-          <p class="card-text">Brazil nears deal to produce Oxford coronavirus vaccine</p>
-          <a href="https://www.google.co.in/amp/s/www.indiatoday.in/amp/india/story/coronavirus-news-live-updates-coronil-patanjali-covid-medicine-india-cases-1692084-2020-06-24" class="btn btn-primary">Learn More</a>
+          <p class="card-text">पिछले पांच साल में पहली बार तय समय से पहले पहुंचा मॉनसून, बुधवार को 23.8 एमएम बारिश दर्ज की गई</p>
+          <a href="https://dainik-b.in/I2fbWMiqA7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
