--- a/index.html
+++ b/index.html
@@ -45,6 +45,30 @@
         </div>
       </div>
 
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">4.</h5>
+          <p class="card-text">आईआईटी गुवाहाटी ने विकसित की डिवाइस, यह आंसुओं की जांच करके शुरुआती स्टेज में डायबिटीज रेटिनोपैथी होने पर अलर्ट करती है</p>
+          <a href="https://dainik-b.in/QR8PQ75sB7" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">5.</h5>
+          <p class="card-text">AI से मिल रही वैक्सीन बनाने में मदद, फेस रिकॉग्निशन कोरोना मरीज पर नजर रख रहा, रोबोट कर रहे देखभाल और साफ-सफाई </p>
+          <a href="https://dainik-b.in/UDulNXeLA7" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">6.</h5>
+          <p class="card-text">मध्य प्रदेश में 1 जुलाई से 'किल कोरोना अभियान' शुरू होगा, 10 हजार टीमें हर दिन 10 लाख परिवारों का सर्वे करेंगी</p>
+          <a href="https://dainik-b.in/d5yvmU0Bz7" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+
       
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
