--- a/index.html
+++ b/index.html
@@ -24,48 +24,32 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">पाकिस्तान 29 जून से कॉरिडोर खोलने के लिए तैयार, कोरोनावायरस की वजह से 15 मार्च को बंद किया गया था</p>
-          <a href="https://dainik-b.in/kmvXTNzuE7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">India bans 59 Chinese apps including TikTok, Helo, WeChat.</p>
+          <a href="https://www.india.com/news/india/chinese-apps-banned-what-will-happen-to-installed-apps-now-alternatives-faqs-answered-4071249/" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">प्रधानमंत्री मोदी ने रोजगार अभियान की शुरुआत की, कहा- पता नहीं कोरोना से कब निजात मिलेगी, बस दो गज दूरी का ख्याल रखें </p>
-          <a href="https://dainik-b.in/1h4xFipEC7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Google Maps now features COVID-19 Travel Alerts with social distancing mandates and crowd levels</p>
+          <a href="https://www.reddit.com/r/worldnews/comments/hi695a/google_maps_now_features_covid19_travel_alerts/" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">10वीं में 83.31% और 12वीं में 74.63% स्टूडेंट्स ने हासिल की सफलता, 10वीं में रिया जैन और 12वीं में अनुराग मलिक बने टॉपर</p>
-          <a href="https://dainik-b.in/oI2GmjkjD7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Telugu NRI Ravi Puli helps arrange chartered flight to bring back 250 Indians from US</p>
+          <a href="https://www.newindianexpress.com/good-news/2020/jun/29/telugu-nri-ravi-puli-helps-arrange-chartered-flight-to-bring-back-250-indians-from-us-2162828.html" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">30 जून को हो सकता है शिवराज के मंत्रिमंडल का विस्तार, रविवार को दिल्ली जा सकते हैं मुख्यमंत्री </p>
-          <a href="30 जून को हो सकता है शिवराज के मंत्रिमंडल का विस्तार, रविवार को दिल्ली जा सकते हैं मुख्यमंत्री" class="btn btn-primary">Learn More</a>
-        </div>
-      </div>
-
-    <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">5.</h5>
-          <p class="card-text">अब तक 113 मेधावियों के नाम पर बन चुकी हैं सड़कें, डिप्टी सीएम केशव मौर्य ने कहा- इससे छात्रों का मनोबल बढ़ेगा</p>
-          <a href="https://dainik-b.in/rV1Y5o2ME7" class="btn btn-primary">Learn More</a>
-        </div>
-      </div>
-
-    <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">6.</h5>
-          <p class="card-text">SBI और यूनियन बैंक ऑफ़ इंडिया सहित ये 10 बैंक 8 फीसदी से भी कम ब्याज पर दे रहे हैं होम लोन</p>
-          <a href="https://dainik-b.in/FNIg9gtnE7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">First Indian COVID-19 vaccine candidate COVAXIN by Bharat Biotech, gets DCGI approval for human trials</p>
+          <a href="https://www.timesnownews.com/health/article/india-s-first-covid-19-vaccine-covaxin-gets-dcgi-approval-for-clinical-trials/613790" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
