--- a/index.html
+++ b/index.html
@@ -24,32 +24,48 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">India bans 59 Chinese apps including TikTok, Helo, WeChat.</p>
-          <a href="https://www.india.com/news/india/chinese-apps-banned-what-will-happen-to-installed-apps-now-alternatives-faqs-answered-4071249/" class="btn btn-primary">Learn More</a>
+          <p class="card-text">नासा ने बनाया संक्रमण रोकने वाला नेकलेस 'पल्स', हाथ को चेहरे के पास पहुंचते ही यह वाइब्रेट होकर अलर्ट करेगा</p>
+          <a href="https://dainik-b.in/2xp8XENtL7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">Google Maps now features COVID-19 Travel Alerts with social distancing mandates and crowd levels</p>
-          <a href="https://www.reddit.com/r/worldnews/comments/hi695a/google_maps_now_features_covid19_travel_alerts/" class="btn btn-primary">Learn More</a>
+          <p class="card-text">UPSC ने लिया बड़ा फैसला, 4 अक्टूबर को होने वाली प्रीलिम के लिए कैंडिडेट्स बदल सकेंगे एग्जाम सेंटर</p>
+          <a href="https://dainik-b.in/DvVrBQLAL7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">Telugu NRI Ravi Puli helps arrange chartered flight to bring back 250 Indians from US</p>
-          <a href="https://www.newindianexpress.com/good-news/2020/jun/29/telugu-nri-ravi-puli-helps-arrange-chartered-flight-to-bring-back-250-indians-from-us-2162828.html" class="btn btn-primary">Learn More</a>
+          <p class="card-text">रविंद्र जडेजा इंडिया के मोस्ट वैल्यूएबल टेस्ट प्लेयर बने, मैगजीन ने कहा- उनका रोल काफी अहम</p>
+          <a href="https://dainik-b.in/0W2L5meqL7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">First Indian COVID-19 vaccine candidate COVAXIN by Bharat Biotech, gets DCGI approval for human trials</p>
-          <a href="https://www.timesnownews.com/health/article/india-s-first-covid-19-vaccine-covaxin-gets-dcgi-approval-for-clinical-trials/613790" class="btn btn-primary">Learn More</a>
+          <p class="card-text">कल होगा मंत्रिमंडल का विस्तार, मुख्यमंत्री ने कहा- जब भी मंथन होता है अमृत निकलता है और विष शिव पी जाते हैं</p>
+          <a href="https://dainik-b.in/R9rCrkB6K7" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">5.</h5>
+          <p class="card-text">86 साल में पहली बार स्थापित नहीं होगी लालबाग के राजा की प्रतिमा, इसकी जगह लगेगा ब्लड और प्लाज्मा डोनेशन कैंप</p>
+          <a href="https://dainik-b.in/hefk6zo4K7" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">6.</h5>
+          <p class="card-text">आईआईटी मद्रास अब डेटा साइंस में ऑनलाइन डिग्री देगा; देश का पहला इंस्टीट्यूट बना, इस सेक्टर में सवा करोड़ नौकरियां</p>
+          <a href="https://dainik-b.in/9akKm1pAK7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
