--- a/index.html
+++ b/index.html
@@ -24,48 +24,48 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">नासा ने बनाया संक्रमण रोकने वाला नेकलेस 'पल्स', हाथ को चेहरे के पास पहुंचते ही यह वाइब्रेट होकर अलर्ट करेगा</p>
-          <a href="https://dainik-b.in/2xp8XENtL7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">रिलायंस ने लॉन्च किया वीडियो कॉन्फ्रेंसिंग ऐप जियोमीट, एक साथ 100 पार्टिसिपेंट्स कर सकेंगे एचडी वीडियो कॉलिंग</p>
+          <a href="https://dainik-b.in/lEjP1vyzO7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">UPSC ने लिया बड़ा फैसला, 4 अक्टूबर को होने वाली प्रीलिम के लिए कैंडिडेट्स बदल सकेंगे एग्जाम सेंटर</p>
-          <a href="https://dainik-b.in/DvVrBQLAL7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">स्टूडेंट्स के लिए फिट इंडिया टॉक्स सीरीज लॉन्च करेंगे केंद्रीय शिक्षा मंत्री, आज शाम 5 बजे होगी शुरुआत</p>
+          <a href="https://dainik-b.in/JUGvUoLtO7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">रविंद्र जडेजा इंडिया के मोस्ट वैल्यूएबल टेस्ट प्लेयर बने, मैगजीन ने कहा- उनका रोल काफी अहम</p>
-          <a href="https://dainik-b.in/0W2L5meqL7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">श्रीनगर की डल झील साफ करने जुटी 7 साल की जन्नत, अब स्कूल की किताब में पढ़ाई जा रही उसकी कहानी </p>
+          <a href="https://dainik-b.in/4lvwr9nvO7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">कल होगा मंत्रिमंडल का विस्तार, मुख्यमंत्री ने कहा- जब भी मंथन होता है अमृत निकलता है और विष शिव पी जाते हैं</p>
-          <a href="https://dainik-b.in/R9rCrkB6K7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">गलवान के शहीदों को याद करने के बाद घायल जवानों से मिले मोदी, कहा- पूरी दुनिया आपकी वीरता का एनालिसिस कर रही </p>
+          <a href="https://dainik-b.in/og2kyJqkO7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">5.</h5>
-          <p class="card-text">86 साल में पहली बार स्थापित नहीं होगी लालबाग के राजा की प्रतिमा, इसकी जगह लगेगा ब्लड और प्लाज्मा डोनेशन कैंप</p>
-          <a href="https://dainik-b.in/hefk6zo4K7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">टॉप 15 की लिस्ट में चंडीगढ़ नंबर वन पर, 82.3 प्रतिशत है रिकवरी रेट</p>
+          <a href="https://dainik-b.in/seRGPfLyO7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">6.</h5>
-          <p class="card-text">आईआईटी मद्रास अब डेटा साइंस में ऑनलाइन डिग्री देगा; देश का पहला इंस्टीट्यूट बना, इस सेक्टर में सवा करोड़ नौकरियां</p>
-          <a href="https://dainik-b.in/9akKm1pAK7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">वॉट्सऐप पर यूजर्स को मिलेगी अब एनिमिटेड स्टीकर्स से लेकर क्यूआर कोड की सुविधा, बेहतर वीडियो कॉलिंग से लेकर कई मजेदार फीचर्स भी उपलब्ध होंगे</p>
+          <a href="https://dainik-b.in/YJuyv7qdN7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
