--- a/index.html
+++ b/index.html
@@ -24,48 +24,32 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">रिलायंस ने लॉन्च किया वीडियो कॉन्फ्रेंसिंग ऐप जियोमीट, एक साथ 100 पार्टिसिपेंट्स कर सकेंगे एचडी वीडियो कॉलिंग</p>
-          <a href="https://dainik-b.in/lEjP1vyzO7" class="btn btn-primary">Learn More</a>
+          <p class="card-text"> ICMR aims to launch indigenous COVID-19 vaccine by August 15.</p>
+          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://m.timesofindia.com/india/icmr-aims-to-launch-indigenous-covid-19-vaccine-by-august-15/amp_articleshow/76764982.cms&ved=2ahUKEwjUjfba2bPqAhUryDgGHfW5D0MQtwIwBHoECAMQAQ&usg=AOvVaw1X7YjForM-LesmORkK_Oh7&ampcf=1" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">स्टूडेंट्स के लिए फिट इंडिया टॉक्स सीरीज लॉन्च करेंगे केंद्रीय शिक्षा मंत्री, आज शाम 5 बजे होगी शुरुआत</p>
-          <a href="https://dainik-b.in/JUGvUoLtO7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Goa opens for tourism, hotels to accept guests with bookings</p>
+          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://www.ndtv.com/india-news/hotels-in-goa-ready-to-reopen-awaiting-governments-covid-19-guidelines-2256061%3Famp%3D1%26akamai-rum%3Doff&ved=2ahUKEwirqqPl27PqAhWjyDgGHa1NDJoQ0PADMAJ6BAgLEA4&usg=AOvVaw39krUzcYjt3KdIINj3KoKj&ampcf=1" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">श्रीनगर की डल झील साफ करने जुटी 7 साल की जन्नत, अब स्कूल की किताब में पढ़ाई जा रही उसकी कहानी </p>
-          <a href="https://dainik-b.in/4lvwr9nvO7" class="btn btn-primary">Learn More</a>
+          <p class="card-text">The decline in gold imports helps in narrowing the country's trade deficit </p>
+          <a href="https://www.google.co.in/amp/s/www.financialexpress.com/market/commodities/covid-19-gold-imports-plunge-but-its-a-good-news-for-india/2012770/lite/" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">गलवान के शहीदों को याद करने के बाद घायल जवानों से मिले मोदी, कहा- पूरी दुनिया आपकी वीरता का एनालिसिस कर रही </p>
-          <a href="https://dainik-b.in/og2kyJqkO7" class="btn btn-primary">Learn More</a>
-        </div>
-      </div>
-
-    <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">5.</h5>
-          <p class="card-text">टॉप 15 की लिस्ट में चंडीगढ़ नंबर वन पर, 82.3 प्रतिशत है रिकवरी रेट</p>
-          <a href="https://dainik-b.in/seRGPfLyO7" class="btn btn-primary">Learn More</a>
-        </div>
-      </div>
-
-    <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">6.</h5>
-          <p class="card-text">वॉट्सऐप पर यूजर्स को मिलेगी अब एनिमिटेड स्टीकर्स से लेकर क्यूआर कोड की सुविधा, बेहतर वीडियो कॉलिंग से लेकर कई मजेदार फीचर्स भी उपलब्ध होंगे</p>
-          <a href="https://dainik-b.in/YJuyv7qdN7" class="btn btn-primary">Learn More</a>
+          <p class="card-text"Sports Ministry to remove Rs 2 lakh salary cap for Indian coaches training elite athletes</p>
+          <a href="https://m.hindustantimes.com/other-sports/sports-ministry-to-remove-salary-cap-of-rs-2-lakhs-for-indian-coaches/story-oMq3X399TYIG1BGg8lbQKP_amp.html&ved=2ahUKEwii7YbM3rPqAhXWxTgGHUGEAjcQFjAGegQIBBAB&usg=AOvVaw129gC43kH0nF4ldKeElwzG&ampcf=1" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
